[package]
name = "fluffy-fiesta"
version = "0.1.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/remram44/fluffy-fiesta"
description = "Platformer game with Piston"
readme = "README.md"
keywords = ["game", "platformer"]

[[bin]]
name = "client"

[dependencies]
env_logger = "0.4"
log = "0.3"
vecmath = "0.3"

# Abstract graphics
conrod = { version = "0.53", features = ["piston"] }
piston = "0.32"
piston2d-graphics = "0.21"
piston_window = "0.66"

# Concrete graphics
pistoncore-sdl2_window = "0.43"
sdl2 = "0.30"

[features]
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]
